test_suite5/DRACO/test_suite/draco-pinpoint/passing/pass_bit_left_shift_op.draco
proc main() void : a := a << b; corp;

