test_suite5/DRACO/test_suite/draco-pinpoint/failing/fail_from_as_identifier.draco
int from;
 
proc main() void : a := 1; corp;
